# realtime_whiteboard

./: .gitignore  .gitignore.deploy  .gitmodules  .system-config.json  CMakeLists.txt  DEPLOYMENT_GUIDE.md  GITHUB_INTEGRATION_GUIDE.md  Makefile  RDP_IMPLEMENTATION_GUIDE.md  README.md  Resume.md  SMART_DEPLOYMENT_SUMMARY.md  TODO.md  VERCEL_SETUP_SUMMARY.md  WEBSOCKET_ARCHITECTURE.md  WSL_RAILWAY_DEPLOYMENT_GUIDE.md  backup_main_complex.go  build.sh  clean.sh  handlers.go  init.sql  package-lock.json  run.sh  setup.sh  setup_glad.sh  spatial.go
.cache/clangd/index/: Canvas.cpp.BD5C9A3A3105E802.idx  Canvas.hpp.F9AEAB9F24C3B0B9.idx  ColorPicker.cpp.77609F31680E2225.idx  ColorPicker.hpp.7731932ECCCBBDE3.idx  Toolbar.cpp.BD47EE8B68C93E72.idx  Toolbar.hpp.0000DBFF9A3F900E.idx  WebSocketServer.cpp.B2A8D16F89711CD3.idx  WebSocketServer.hpp.B9AC2110F97399C6.idx  cocoa_init.m.3C83347F7050C825.idx  cocoa_joystick.h.B68A187BF4E9D547.idx  cocoa_joystick.m.B2C2513C44239C94.idx  cocoa_monitor.m.1F8D45CB1D00CE67.idx  cocoa_platform.h.5FE919B9F0C4330B.idx  cocoa_time.c.734C6D4EC63185C0.idx  cocoa_time.h.48BF08EC5BC53B82.idx  cocoa_window.m.4D8F11511A7E8698.idx  context.c.4D32C479A7093B16.idx  egl_context.c.C02DD205A1F0C789.idx  glfw3.h.75D2D6E8BD239DB6.idx  glfw3native.h.9550F0E6C1796EEE.idx  init.c.F62E1BD6ACD616C3.idx  input.c.0B53A6F3358785CC.idx  internal.h.5BB87BB47B6AB2CF.idx  main.cpp.776D4F34004AE5E9.idx  mappings.h.A96C93DB687C1515.idx  (+16 more)
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  deploy-railway.yml  deploy-vercel.yml  preview.yml
backend/: .gitignore  README.md
backend/cpp_server/: .gitignore  CMakeLists.txt  README.md
backend/includes/: build.sh  test  test.cpp
backend/scripts/: build.sh  build_basic.sh  build_native.sh  build_simple.sh  build_wasm.sh  run_simple.sh  test_all.sh  test_emscripten.sh  test_glm.sh  test_sdl.sh  test_simple.sh  test_webgpu.sh  validate_wasm.sh
backend/src/: basic_test.cpp  bindings.cpp  main.cpp  simple_test.cpp  test_wasm.cpp
backend/test_includes/: test_emscripten.cpp  test_emscripten_simple.cpp  test_glm.cpp  test_sdl.cpp  test_webgpu.cpp
client/: .gitignore  CMAKE_CONFIGURATION_GUIDE.md  ERASE_FEATURE_GUIDE.md  IMPLEMENTATION_GUIDE.md  README.md  README_native_wasm_workflow.md  RENDERING_ARCHITECTURE.md  WEBGPU_IMPLEMENTATION_GUIDE.md  WEBGPU_INTEGRATION_SUMMARY.md  package.json
client/public/: drawing_engine.js  drawing_engine.wasm
client/src/: App.css  App.tsx
client/wasm/: CMakeLists.txt  build.sh  drawing_engine.cpp  drawing_engine.hpp  drawing_engine.js  drawing_engine.wasm  emscripten-toolchain.cmake
client/wasm/include/: drawing_engine.hpp
client/wasm/include/renderer/: abstract_renderer.hpp  renderer_factory.hpp  webgpu_renderer.hpp
client/wasm/src/: bindings.cpp  drawing_engine.cpp
client/wasm/src/renderer/: renderer_factory.cpp  webgpu_renderer.cpp
diagrams/: README.md  backend-architecture.md  component-architecture.md  component-flow.md  frontend-architecture.md  ml-architecture.md  websocket-architecture.md
docker/: README.md
docs/: 000_ARCHITECTURE_OVERVIEW.md  001_database_architecture.md  002_operational_transform.md  003_client_state_management.md  004_deployment_guide.md  README.md  websocket_communication_fix.md
docs/diagrams/: ml-shapes-architecture.md
example/: Makefile  Makefile.simple  README.md  README_TESTING.md  chat_message.json  cpp_client.cpp  html_client.html  room_join.json  simple_client  simple_cpp_client.cpp  stroke_batch.json  test_data.json  test_stroke.json
frontend/: .gitignore  README.md  REFACTORING_SUMMARY.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/interface/: CanvasProps.ts  WebGPUState.ts
frontend/public/: drawing_engine.js  drawing_engine.wasm
frontend/src/: App.tsx  main.tsx
frontend/test-results/: .last-run.json
go-server/: Dockerfile  README.md  README_TEST.md  compression.go  go.mod  go.sum  main.go  ot.go  package-lock.json  pyproject.toml  recovery.go  test_client.html  test_websocket.py
go-server/api/: room_handlers.go  user_handlers.go
go-server/database/: connection.go
go-server/models/: session.go
go-server/redis/: connection.go
go-server/scripts/: monitor.sh
go-server/services/: admin_service.go  canvas_service.go  invite_service.go  models.go  room_service.go  user_service.go
go-server/storage/: s3.go
go-server/websocket/: canvas_handler.go  client.go  hub.go  types.go  user_handler.go
include/: Canvas.hpp  ColorPicker.hpp  Toolbar.hpp
migrations/: 001_uuid_migration.sql
ml_shapes/: .gitignore  Dockerfile  README.md  README_training.md  __init__.py  label_map.json  main.py  pyproject.toml  railway.toml  requirements.txt
ml_shapes/api/: detection_service.py
ml_shapes/cpp/: CMakeLists.txt  main.cpp
ml_shapes/models/: shape_detector.py
ml_shapes/training/: data_collection_interface.py  data_generation_system.py  dataset_manager.py  enhanced_training.py  train_model.py
public/: drawing_engine.js
scripts/: README.md  build_all.sh  cleanup-docker.sh  cleanup.sh  debug.sh  deploy.sh  detect-system.sh  dev.sh  docker-dev.sh  fix-python-version.sh  fix-pytorch-install.sh  install-pytorch.sh  kill-all-ports.sh  setup-deployment.sh  setup.sh  start-ml-docker.sh  validate_all.sh
shared/: README.md
shared/protocols/: websocket.json
shared/types/: websocket.ts
src/: Canvas.cpp  ColorPicker.cpp  Toolbar.cpp  main.cpp
src/canvas/: canvas.cpp  canvas.hpp
src/core/: Canvas.cpp  Canvas.h
src/export/: Exporter.h
src/net/: WebSocketClient.cpp  WebSocketClient.h
src/platform/: Window.cpp  Window.h
src/ui/: Toolbar.cpp  Toolbar.h
websocket-server/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  TEST_RESULTS.md  build.sh  railway.toml  test_server.sh
websocket-server/src/: main.cpp
websocket-tests/: README.md  check_server.py  pyproject.toml  run_tests.py  test_go_ws.py  test_websocket_server.py
websocket-tests/tests/: __init__.py  test_websocket_server.py
(+90 files in other folders)
