[project]
name = "shape_recognizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Yongthz",email = "yuntao2019@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "numpy (>=2,<2.3.0)",
    "opencv-python-headless (>=4.12.0.88,<5.0.0.0)",
    "ndjson (>=0.3.1,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_cuda_118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch_cuda_118"}
torchvision = {source = "pytorch_cuda_118"}
torchaudio = {source = "pytorch_cuda_118"}
