[project]
name = "shape_recognizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Yongthz",email = "yuntao2019@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "matplotlib (>=3.10.5,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "numpy (>=2,<2.3.0)",
    "opencv-python-headless (>=4.12.0.88,<5.0.0.0)",
    "ndjson (>=0.3.1,<0.4.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
torch = "^2.8.0"
torchvision = "^0.23.0"
