[tool.poetry]
name = "websocket-tests"
version = "0.1.0"
description = "Comprehensive WebSocket server test suite for the realtime whiteboard"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "websocket_tests"}]

[tool.poetry.dependencies]
python = "^3.8.1"
websockets = "^12.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
aiohttp = "^3.9.1"
asyncio-mqtt = "^0.16.1"
colorama = "^0.4.6"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["websocket_tests"]

[tool.mypy]
python_version = "3.8.1"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
